[build-system]
requires = ["pip>=24", "setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lavague"
version = "1.0.11"
description = "Selenium & Playwright code generation from text instructions"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["IA", "AI", "selenium", "generation", "playwright"]
authors = [
  {name = "Mithril Security", email = "contact@mithrilsecurity.io" }
]
maintainers = [
  {name = "Mithril Security", email = "contact@mithrilsecurity.io" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

# hard-fixing all of llama-index subdependencies because they can break at any time
dependencies = [
  "llama-index==0.10.19",
  "llama-index-agent-openai==0.1.5",
  "llama-index-cli==0.1.9",
  "llama-index-core==0.10.19",
  "llama-index-embeddings-azure-openai==0.1.5",
  "llama-index-embeddings-openai==0.1.6",
  "llama-index-indices-managed-llama-cloud==0.1.4",
  "llama-index-legacy==0.9.48",
  "llama-index-llms-azure-openai==0.1.5",
  "llama-index-llms-litellm==0.1.4",
  "llama-index-llms-openai==0.1.9",
  "llama-index-llms-anthropic==0.1.8",
  "llama-index-llms-groq==0.1.3",
  "llama-index-multi-modal-llms-openai==0.1.4",
  "llama-index-program-openai==0.1.4",
  "llama-index-question-gen-openai==0.1.3",
  "llama-index-readers-file==0.1.9",
  "llama-index-readers-llama-parse==0.1.3",
  "llama-index-retrievers-bm25==0.1.3",
  "tree-sitter==0.21.0",
  "tree-sitter-languages==1.10.2",
  "nest_asyncio==1.6.0",
  "playwright==1.42.0",
  "google-search-results==2.4.2",
  "python-dotenv==1.0.1",
  "gradio==4.21.0",
  "ipython",
  "langchain==0.1.10",
  "datasets"
]

[project.optional-dependencies]
dev = ["ruff", "ipykernel"]
cuda = ["accelerate==0.28.0", "bitsandbytes==0.42.0"]
huggingface = ["llama-index-embeddings-huggingface==0.1.4", "llama-index-llms-huggingface==0.1.4"]
selenium = ["selenium==4.18.1"]

[project.urls]
"Homepage" = "https://mithrilsecurity.io"
"Bug Reports" = "https://github.com/lavague-ai/LaVague/issues"
"Source" = "https://github.com/lavague-ai/LaVague/"

[project.scripts]
lavague = "lavague.cli.main:cli"
