[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "lavague"
version = "1.1.6"
description = "automation code generation from text instructions"
authors = ["lavague-ai"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]
keywords = ["LAM", "action", "automation", "LLM", "NLP", "RAG", "selenium", "playwright"]
homepage = "https://mithrilsecurity.io"
repository = "https://github.com/lavague-ai/LaVague/"
documentation = "https://docs.lavague.ai/en/latest/"
packages = [{from = "_lavague", include = "lavague"}]

[tool.poetry.dependencies]
python = "^3.10.0"
lavague-core = "^0.2.20"
lavague-drivers-selenium = "^0.2.6"
lavague-contexts-openai = "^0.2.0"
lavague-gradio = "^0.2.4"

[tool.poetry.dev-dependencies]
ruff = "^0.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

