[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "lavague-core"
version = "0.1.0"
description = "automation code generation from text instructions"
authors = ["lavague-ai"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]
keywords = ["LAM", "action", "automation", "LLM", "NLP", "RAG", "selenium", "playwright"]
homepage = "https://lavague.ai"
repository = "https://github.com/lavague-ai/LaVague/"
documentation = "https://docs.lavague.ai/en/latest/"
packages = [{include = "lavague/"}]

# hard-fixing all of llama-index subdependencies because they can break at any time
[tool.poetry.dependencies]
python = "^3.8.1"
llama-index = "^0.10.19"
llama-index-core = "^0.10.19"
llama-index-readers-file = "^0.1.9"
llama-index-readers-llama-parse = "^0.1.3"
llama-index-retrievers-bm25 = "^0.1.3"
llama-index-embeddings-huggingface = {optional = true, version = "^0.1.4"}
llama-index-llms-huggingface = {optional = true, version = "^0.1.4"}
tree-sitter = "^0.21.0"
tree-sitter-languages = "^1.10.2"
nest_asyncio = "^1.6.0"
google-search-results = "^2.4.2"
python-dotenv = "^1.0.1"
langchain = "^0.1.16"
lxml = "^4.9.0"
accelerate = {optional = true, version = "^0.28.0"}
bitsandbytes = {optional = true, version = "^0.42.0"}

[tool.poetry.extras]
cuda = ["accelerate", "bitsandbytes"]
huggingface = ["llama-index-embeddings-huggingface", "llama-index-llms-huggingface"]
playwright = ["playwright"]

