[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "lavague-core"
version = "0.2.20"
description = "automation code generation from text instructions"
authors = ["lavague-ai"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]
keywords = ["LAM", "action", "automation", "LLM", "NLP", "RAG", "selenium", "playwright"]
homepage = "https://lavague.ai"
repository = "https://github.com/lavague-ai/LaVague/"
documentation = "https://docs.lavague.ai/en/latest/"
packages = [{include = "lavague/"}]

[tool.poetry.dependencies]
python = "^3.10.0"
llama-index = "^0.10.19"
llama-index-retrievers-bm25 = "^0.1.3"
lxml = "^5.1.1"
langchain = "^0.1.20"
ipython = "^7.34.0"
msgpack = "^1.0.8"
trafilatura = "^1.9.0"
lxml-html-clean = "^0.1.1"
seaborn = "^0.13.2"
tenacity = ">=8.2.0,<8.4.0"
