[tool.poetry]
name = "lavague-qa"
version = "0.0.1"
description = "QA Automation with LaVague"
authors = ["lavague-ai"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]
keywords = ["QA", "testing", "automation", "cypress", "agents", "RAG", "selenium", "ai"]
homepage = "https://lavague.ai"
repository = "https://github.com/lavague-ai/LaVague/"
documentation = "https://docs.lavague.ai/en/latest/"
packages = [{include = "lavague/"}]

[tool.poetry.dependencies]
python = "^3.10.0"
lavague-core = "^0.2.28"
lavague-drivers-selenium = "^0.2.6"
lavague-tests = "^0.0.3"
gherkin-official = "^28.0.0"
click = "^8.1.7"
yaspin = "^3.0.2"

[tool.poetry.scripts]
lavague-qa = "lavague.qa.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
