[tool.poetry]
name = "lavague-drivers-cloud"
version = "0.1.0"
description = "Remote driver to interact directly with the cloud's driver"
authors = ["lavague-ai"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
