[tool.poetry]
name = "lavague-exporters-python-selenium"
version = "0.1.0"
description = "selenium+python exporter for lavague trajectories"
authors = ["lavague-ai"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "lavague/"}]

[tool.poetry.dependencies]
python = "^3.10"
lavague-sdk = {path = "../../../lavague-sdk", develop = true} # change to pypi dep when public release
lavague-exporters-python = {path = "../lavague-exporters-python", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
